<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CVResult">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/k_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-black"
            android:text="@string/hi_kc" />

        <TextView
            android:id="@+id/k_title_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/your_resume_is_looking_good_here_is_what_we_have_collected_from_you" />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/name_text"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/name_value"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/kc"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:layout_marginEnd="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/country"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/country_key"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/country_value"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/kc"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:layout_marginEnd="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dob_key"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/dob_key"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/dob"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/kc"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:layout_marginEnd="10dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phone_key"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/phone"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/kc"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:layout_marginEnd="10dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/email_key"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/email_key"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/email"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/kc"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:layout_marginEnd="10dp" />

        </LinearLayout>

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:height="50dp"
            android:text="@string/back" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>